gitops/generated/mail/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mail
  namespace: mail

spec:
  selector:
    app: mail

  ports:
  - name: http
    port: 25
    targetPort: 25

  type: ClusterIP
