gitops/generated/mail/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mail
  namespace: mail

spec:
  ingressClassName: traefik

  rules:
  - host: mail.shopnoltd.dpdns.org
    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: mail
            port:
              number: 80
